# hermes-memo

./: .gitignore  README.md  __init__.py  conversation.py  plugin.yaml  pyproject.toml
deploy/: deploy-memo-plugin.sh  env.example.local
docs/spec/: td_hermes-memo-plugin_zh.md
docs/test/: e2e_hermes-memo_runbook_zh.md  tp_hermes-memo-plugin_zh.md  tr_hermes-memo_e2e_zh.md
scripts/: publish-release.sh
src/hermes_memo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/memo/: __init__.py  capture.py  client.py  config.py  conversation.py  tools.py
tests/: conftest.py
tests/integration/: test_live_roundtrip.py
tests/unit/: test_conversation_and_tools.py  test_provider.py
