[project]
name = "hermes-memo"
version = "0.1.0"
description = "Hermes MemoryProvider plugin backed by the Voyager Memo memory service"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
